plugins {
    id 'java'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17


dependencies {
    testImplementation ('org.junit.jupiter:junit-jupiter-api')
    testImplementation ('org.junit.jupiter:junit-jupiter-engine')
    testImplementation ('org.assertj:assertj-core')
    testImplementation ('org.mockito:mockito-core')
    testImplementation ('org.mockito:mockito-junit-jupiter')
}

tasks.withType(JavaCompile) {
    options.with {
        encoding = 'UTF-8'
    }
}